[gd_scene load_steps=3 format=2]

[ext_resource path="res://Resources/UnitIcon.JPG" type="Texture" id=1]
[ext_resource path="res://UI/PlayerHUD.gd" type="Script" id=2]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 0
size_flags_vertical = 0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_top = 440.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 0
size_flags_vertical = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxSelectedItem" type="VBoxContainer" parent="HBoxContainer"]
margin_right = 254.0
margin_bottom = 160.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="LabelSelectedItem" type="Label" parent="HBoxContainer/VBoxSelectedItem"]
margin_right = 254.0
margin_bottom = 14.0
text = "Selected Item"
align = 1

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/VBoxSelectedItem"]
margin_top = 18.0
margin_right = 254.0
margin_bottom = 160.0
size_flags_vertical = 3
custom_constants/margin_right = 25
custom_constants/margin_top = 10
custom_constants/margin_left = 25
custom_constants/margin_bottom = 10

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/VBoxSelectedItem/MarginContainer"]
margin_left = 25.0
margin_top = 10.0
margin_right = 229.0
margin_bottom = 132.0
size_flags_vertical = 3
texture = ExtResource( 1 )
expand = true

[node name="VBoxStats" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 258.0
margin_right = 766.0
margin_bottom = 160.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0

[node name="LabelStats" type="Label" parent="HBoxContainer/VBoxStats"]
margin_right = 508.0
margin_bottom = 14.0
text = "Stats"
align = 1

[node name="MarginStatsInfo" type="MarginContainer" parent="HBoxContainer/VBoxStats"]
margin_top = 18.0
margin_right = 508.0
margin_bottom = 160.0
size_flags_vertical = 3
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20

[node name="ScrollContainerInfo" type="ScrollContainer" parent="HBoxContainer/VBoxStats/MarginStatsInfo"]
margin_left = 20.0
margin_top = 20.0
margin_right = 488.0
margin_bottom = 122.0

[node name="GridStatsInfo" type="GridContainer" parent="HBoxContainer/VBoxStats/MarginStatsInfo/ScrollContainerInfo"]
columns = 4

[node name="VBoxCommands" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 770.0
margin_right = 1024.0
margin_bottom = 160.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="LabelCommands" type="Label" parent="HBoxContainer/VBoxCommands"]
margin_right = 254.0
margin_bottom = 14.0
text = "Commands"
align = 1

[node name="MarginCommands" type="MarginContainer" parent="HBoxContainer/VBoxCommands"]
margin_top = 18.0
margin_right = 254.0
margin_bottom = 160.0
size_flags_vertical = 3
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5

[node name="GridCommands" type="GridContainer" parent="HBoxContainer/VBoxCommands/MarginCommands"]
margin_left = 5.0
margin_top = 5.0
margin_right = 249.0
margin_bottom = 137.0
columns = 6

[node name="Button" type="Button" parent="HBoxContainer/VBoxCommands/MarginCommands/GridCommands"]
margin_right = 12.0
margin_bottom = 20.0

[node name="Button2" type="Button" parent="HBoxContainer/VBoxCommands/MarginCommands/GridCommands"]
margin_left = 16.0
margin_right = 28.0
margin_bottom = 20.0

[node name="Button3" type="Button" parent="HBoxContainer/VBoxCommands/MarginCommands/GridCommands"]
margin_left = 32.0
margin_right = 44.0
margin_bottom = 20.0

[node name="Button4" type="Button" parent="HBoxContainer/VBoxCommands/MarginCommands/GridCommands"]
margin_left = 48.0
margin_right = 60.0
margin_bottom = 20.0

[node name="Button5" type="Button" parent="HBoxContainer/VBoxCommands/MarginCommands/GridCommands"]
margin_left = 64.0
margin_right = 76.0
margin_bottom = 20.0

[node name="Button6" type="Button" parent="HBoxContainer/VBoxCommands/MarginCommands/GridCommands"]
margin_left = 80.0
margin_right = 92.0
margin_bottom = 20.0
